# argus

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/web/: index.html
apps/web/public/: methodology.html
apps/web/src/: main.js  style.css
apps/web/src/lib/: colorScale.js  referenceTrajectory.js
backups/: starlink-20260412.db
deploy/: setup.sh
scripts/: backup-github.sh  backup-local.sh  backup-r2.sh  backup-vps.sh  benchmark_known_events.py  build_imm_training_set.py  generate_weekly_report.py  label_imm_ukf_bulk.py  label_spacetrack_bulk.py  parse_spacetrack_zip.py  spacetrack_history.py
services/agent/: __main__.py  investigator.py
services/api/: Dockerfile  main.py  runner.py
services/brain/: dynamics.py  imm.py  imm_classifier.py  orbital_analyzer.py  ukf.py
services/ml/: evaluate.py  inference.py  model.py  physics.py  preprocess.py  preprocess_v06.py  train.py  train_v06.py
services/report/: weekly.py
services/telemetry/: dsn_worker.py  horizons_worker.py  propagator.py  spacetrack_fetcher.py  store.py  supgp_fetcher.py  telemetry_worker.py  tle_fetcher.py  tle_validator.py
tests/: test_ml_physics.py  test_smoke.py  test_weekly_report.py
