[project]
name = "selene-insight"
version = "0.1.0"
description = "Artemis II real-time digital twin and deep analysis system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "playwright>=1.49",
    "certifi>=2024.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
    "pytest-asyncio>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["services"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
