[project]
name = "argusorb"
version = "0.2.0"
description = "Starlink constellation tracking and space situational awareness platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "httpx>=0.28",
    "sgp4>=2.23",
    "certifi>=2024.0",
    "numpy>=1.26",
    "scipy>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]
ml = [
    "torch>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["services"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
